- small changes to AI+TA